--- a/WebClient/WebClient/Client.html
+++ b/WebClient/WebClient/Client.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Graphics Test</title>
+    <title>Test</title>
     <link rel="stylesheet" href="Client.css">
 </head>
 <body>
